Uso del map con html

--- a/client/02-map.html
+++ b/client/02-map.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map iterator</title>
 </head>
+
 <body>
-    
+    <div id="app"></div>
+    <script>
+        const products = [
+            { title: 'Burger', price: '500' },
+            { title: 'Pizza', price: '650' }
+        ]
+        const app = document.getElementById('app');
+        const list = products.map(product => {
+            return `<li>${product.title} - ${product.price}</li>`
+        })
+        app.innerHTML = list.join('');
+    </script>
 </body>
+
 </html>
